fix container overflow

--- a/src/index.css
+++ b/src/index.css
@@ -63,9 +63,11 @@
 }
 
 .container {
-  max-width: 124rem;
-  padding: 3rem;
-  margin: 0 auto;
+  max-width: 90vw;
+  height: auto;
+  border-radius: 20px;
+  overflow-x: auto;
+  overflow-y: hidden;
 }
 
 .swiper {
@@ -75,8 +77,7 @@
 
 @media only screen and (max-width: 640px) {
   .swiper {
-    width: 100%;
-    height: 100%;
+    width: 90vw;
   }
 }
 
@@ -87,3 +88,10 @@
   border-radius: 18px;
   background-color: #9F73AB;
 }
+
+/* .swiper-slide {
+  background-position: center;
+  background-size: cover;
+  border-radius: 18px;
+  background-color: #9F73AB;
+} */
